project redfining chelsea site

--- a/attemptone.html
+++ b/attemptone.html
@@ -6,8 +6,20 @@
     <title>Evolution of Chelsea</title>
     <link rel="stylesheet" href="stlyes/blog.css">
     <link rel="shortcut icon" href="icon.jpg">
+    <style>
+        .jose{text-align: left; background-color: rgb(43, 109, 155);color: rgb(203, 228, 250); font-family: Arial, Helvetica, sans-serif;}
+    </style>
 </head>
 <body>
     <h1 id="lion">The Best Club in London, Chelsea</h1>
+    <br>
+    <br>
+    <h2 id="stamford">2 times UCL champions and the one and only team from LDN</h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h3>Introduction</h3>
+    <p class="jose">Chelsea FC was founded in 1905 by Henry Augustus Mears. Home games are played at Stamford Bridge stadium, the original site Mears chose for the club. The team had mixed fortunes over the years, not winning a major trophy until the 1950s and moving up and down between divisions several times.s</p>
 </body>
 </html>
